Добавление фавиконки, вёрстка формы

--- a/index.html
+++ b/index.html
@@ -4,11 +4,44 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="./favicon/favicon.png" type="image/png">
   <title>Git Spy</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
 
+  <div class="site-container">
+    <main class="main">
+      <section class="section">
+        <div class="container">
+          <div class="search">
+            <form class="search-form">
+              <input class="search-form__input input-reset" type="text" placeholder="Введите GitHub-ник">
+              <button class="search-form__button btn-reset">Найти</button>
+            </form>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="attribution">
+          <p class="attribution__text">
+            Favicon-иконка от
+            <a class="attribution__link link-reset" href="https://www.flaticon.com/authors/freepik" target="_blank"
+              rel="noopener noreferrer">Freepik</a>
+            с сайта
+            <a class="attribution__link link-reset" href="https://www.flaticon.com/" target="_blank"
+              rel="noopener noreferrer">Flaticon</a>
+          </p>
+        </div>
+      </div>
+    </footer>
+  </div>
+
+  <script src="./js/main.js"></script>
 </body>
 
 </html>
